--- a/Sukhdayak Motors/views/index.ejs
+++ b/Sukhdayak Motors/views/index.ejs
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="Images/polo.jpg" class="card-img-top" alt="Polo">
+    <img src="Images/Polo.jpg" class="card-img-top" alt="Polo">
     <div class="card-body">
       <h5 class="card-title"><b>Volkswagen Polo</b></h5>
       <p class="card-text"><b>Year of Registration:</b> 2015<p>
