--- a/Sukhdayak Motors/views/index.ejs
+++ b/Sukhdayak Motors/views/index.ejs
@@ -157,7 +157,7 @@
  <div class="row margin-reduction-samraat">
   <div class="column">
     <div class="card">
-      <img src="Images/Rakesh.jpg" alt="Rakesh" style="width:80%">
+      <img src="Images/Rakesh.JPG" alt="Rakesh" style="width:80%">
       <div class="container">
         <h2>Rakesh Ahuja</h2>
         <p class="title">Dealer</p>
