--- a/Sukhdayak Motors/views/car_details.ejs
+++ b/Sukhdayak Motors/views/car_details.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/Style.css">
 	<meta charset="utf-8">
 	<title>
 		Car Details
@@ -180,7 +180,7 @@
  <div class="row margin-reduction-samraat">
   <div class="column">
     <div class="card">
-      <img src="/Images/Rakesh.jpg" alt="Rakesh" style="width:80%">
+      <img src="/Images/Rakesh.JPG" alt="Rakesh" style="width:80%">
       <div class="container">
         <h2>Rakesh Ahuja</h2>
         <p class="title">Dealer</p>
