--- a/Sukhdayak Motors/views/Stock.ejs
+++ b/Sukhdayak Motors/views/Stock.ejs
@@ -68,7 +68,7 @@
                   <p class="card-text"><b>Fuel: </b> Petrol</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/i10w" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
@@ -89,7 +89,7 @@
                   <p class="card-text"><b>Fuel: </b> Petrol</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/i20" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
                   <p class="card-text"><b>Fuel: </b> Petrol</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/i10b" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
@@ -131,7 +131,7 @@
                   <p class="card-text"><b>Fuel: </b> Diesel</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/polo" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
@@ -152,7 +152,7 @@
                   <p class="card-text"><b>Fuel: </b> Petrol</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/santro" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
@@ -173,7 +173,7 @@
                   <p class="card-text"><b>Fuel: </b> Diesel</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
-                  <div class="card-footer">
+                  <div style="margin-top : 11.4% !important;" class="card-footer">
                     <a class="btn btn-primary align-bottom btn-info"; href="/car-details/dzire" role="button" class="car-Detail">View Details</a>
                   </div>
                 </div>
